@@ -9,7 +9,7 @@
  * redistribution of this file, and for a DISCLAIMER OF ALL
  * WARRANTIES.
  * 
- * RCS: @(#) $Id: Pyramid.java,v 1.2.1.2 1999/02/01 00:40:46 mo Exp $
+ * RCS: @(#) $Id: Pyramid.java,v 1.2 1999/05/08 23:25:23 dejong Exp $
  */
 
 import tcl.lang.*;
@@ -17,12 +17,10 @@ import java.awt.*;
 import java.awt.event.*;
 import java.applet.*;
 
-/**
- * This class implements an applet with three components:
- * 1) a drawing of a partially built pyramid,
- * 2) buttons which allow the user to complete or erase the drawing, and
- * 3) a console which runs a Jacl interpreter.
- */
+// This class implements an applet with three components:
+// 1) a drawing of a partially built pyramid,
+// 2) buttons which allow the user to complete or erase the drawing, and
+// 3) a console which runs a Jacl interpreter.
 
 public class Pyramid extends Applet {
 
@@ -32,7 +30,6 @@ public class Pyramid extends Applet {
 
     Button buildButton;
     Button removeButton;
-    Interp interp;
     AppletConsole console;
 
     public int numBlocks;
@@ -46,27 +43,35 @@ public class Pyramid extends Applet {
 
 	// Create buttons to manipulate the pyramid.
 
-	buildButton = new Button(" Build ");
+	buildButton = new Button(" build ");
 	removeButton = new Button(" remove ");
 	add(buildButton);
 	add(removeButton);
 
-	// Create an interpreter.  Add two new commands to the
-	// interpreter:  build and remove.
-
-	interp = new Interp();
-	interp.createCommand("build", new BuildCmd(this));
-	interp.createCommand("remove", new RemoveCmd(this));
-
 	// Create an AppletConsole and add it to the applet.
 
-	console = new AppletConsole(interp, 15, 50);
-	add(console.GetText());
+	console = new AppletConsole(15, 50, this);
 	console.start();
 
-	buildButton.addActionListener(new BuildButtonListener(this));
-	removeButton.addActionListener(new RemoveButtonListener(interp, console));
+	// When the build button is pressed, run "build" cmd
+
+	buildButton.addActionListener(new ActionListener() {
+	    public void actionPerformed(ActionEvent event) {
+                console.putLine("build");
+		console.processCommand("build");
+	    }
+	});
+
+	// When the remove button is pressed, run the "remove" cmd
+
+	removeButton.addActionListener(new ActionListener() {
+	    public void actionPerformed(ActionEvent event) {
+                console.putLine("remove");
+		console.processCommand("remove");
+	    }
+	});
     }
+
 
     // Update the pyramid as shown in the applet.
 
@@ -123,119 +128,5 @@ public class Pyramid extends Applet {
     }
 }
 
-/**
- * This class implements the "build" button in the Pyramid applet.
- *
- * Pressing the "build" button simply results in the invocation of
- * pyramid.buildBlock.  The embedded Tcl interpreter is not involved.
- */
 
-class BuildButtonListener implements ActionListener {
-    Pyramid pyramid;
-
-    BuildButtonListener(Pyramid p) {
-	pyramid = p;
-    }
-    
-    public void actionPerformed(ActionEvent event) {
-	pyramid.buildBlock();
-    }
-}
-
-/**
- * This class implements the "remove" button in the Pyramid applet.
- *
- * Pressing the "remove" button results in the evaluation of the 
- * "remove" command in the embedded Tcl interpreter.
- */
-
-class RemoveButtonListener implements ActionListener {
-    Interp interp;
-    AppletConsole console;
-
-    RemoveButtonListener(Interp i, AppletConsole c) {
-	interp = i;
-	console = c;
-    }
-    
-    public void actionPerformed(ActionEvent event) {
-	String s = "remove\n";
-	int compCode;
-
-	try {
-	    interp.eval(s);
-	    String result = interp.getResult().toString();
-	    if (result.length() > 0) {
-		console.PutLine(result);
-	    }
-	} catch (TclException e) {
-	    compCode = e.getCompletionCode();
-	    if (compCode == TCL.ERROR) {
-		console.PutLine(interp.getResult().toString());
-	    } else {
-		console.PutLine("command returned bad code: " + compCode);
-	    }
-	}
-    }
-}
-
-/**
- * This class implements the "build" command in PyramidPackage.
- */
-
-class BuildCmd extends Applet implements Command {
-    
-    Pyramid pyr;
-
-    BuildCmd(Pyramid p) {
-	pyr = p;
-    }
-
-    /**
-     * This procedure is invoked to process the "build" Tcl command.
-     * We simply call the pyramid's buildBlock method.
-     */
-
-    public void cmdProc(Interp interp, TclObject argv[])
-	    throws TclException {
-
-	if (argv.length != 1) {
-	    throw new TclNumArgsException(interp, 1, argv, "");
-	}
-	if (!pyr.buildBlock()) {
-	    throw new TclException(interp, 
-		    "error in build:  pyramid is already full");
-	}
-	return;
-    }
-}
-
-/**
- * This class implements the "remove" command in PyramidPackage.
- */
-
-class RemoveCmd extends Applet implements Command {
-    
-    Pyramid pyr;
-
-    RemoveCmd(Pyramid p) {
-	pyr = p;
-    }
-
-    // This procedure is invoked to process the "remove" Tcl command.
-    // We simply call the pyramid's removeBlock method.
-
-    public void cmdProc(Interp interp, TclObject argv[])
-	    throws TclException {
-
-	if (argv.length != 1) {
-	    throw new TclNumArgsException(interp, 1, argv, "");
-	}
-	if (!pyr.removeBlock()) {
-	    throw new TclException(interp, 
-		    "error in remove: pyramid is already empty");
-	}
-	return;
-    }
-}
 
